--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,17 @@
 server:
   port: 8088
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/DSsysBackend
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    jwt:
+      key: abcdefghijk
+      expire: 7
+
 springdoc:
   swagger-ui:
     path: /doc/ui
