--- a/compose.yaml
+++ b/compose.yaml
@@ -14,3 +14,11 @@ services:
       - 'REDIS_PASSWORD=12345678'
     ports:
       - '6379:6379'
+  rabbitmq:
+    image: 'rabbitmq:management'
+    environment:
+      - 'RABBITMQ_DEFAULT_USER=root'
+      - 'RABBITMQ_DEFAULT_PASS=12345678'
+    ports:
+      - '5672:5672'
+      - '15672:15672'
